<resources>
    <string name="app_name">HW1A</string>
    <string name="app_contacts">Contacts</string>
    <string name="app_sounds">Sounds</string>
    <string name="action_settings">Settings</string>
    <string name="contact">Change contact</string>
    <string name="sound">Change sound</string>
    <string name="desc">Image description</string>
    <string name="cancel">Cancel</string>\
    <string name="ok">OK</string>

    <string name="John">John Doe</string>
    <string name="Jane">Jane Doe</string>
    <string name="Jan">Jan Kowalski</string>
    <string name="Krystyna">Krystyna Kowalska</string>
    <string name="Jakub">Jakub Anonimowy</string>

    <string-array name="sounds">
        <item>Sound 1</item>
        <item>Sound 2</item>
        <item>Sound 3</item>
        <item>Sound 4</item>
        <item>Sound 5</item>
    </string-array>
</resources>
