<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Main2Activity">

    <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/radioGroup">
        <RadioButton
                android:text="@string/John"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:id="@+id/rBJohn"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintBottom_toTopOf="@+id/rBJane"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintVertical_bias="0.0"
                android:onClick="onRadioButtonClicked"/>
        <RadioButton
                android:text="@string/Jane"
                android:layout_height="100dp"
                android:id="@+id/rBJane"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_width="match_parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toBottomOf="@+id/rBJan"
                android:onClick="onRadioButtonClicked"/>
        <RadioButton
                android:text="@string/Jan"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:id="@+id/rBJan"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@+id/rBJane"
                app:layout_constraintHorizontal_bias="0.0"
                android:onClick="onRadioButtonClicked"/>
        <RadioButton
                android:text="@string/Krystyna"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:id="@+id/rBKrystyna"
                app:layout_constraintTop_toBottomOf="@+id/rBJan"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.0"
                android:onClick="onRadioButtonClicked"/>
        <RadioButton
                android:text="@string/Jakub"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:id="@+id/rBJakub"
                app:layout_constraintTop_toBottomOf="@+id/rBKrystyna"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.0"
                android:onClick="onRadioButtonClicked"/>
    </RadioGroup>
    <Button
            android:text="@string/ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonNameOk"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/buttonNameCancel" android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"/>
    <Button
            android:text="@string/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonNameCancel"
            app:layout_constraintEnd_toStartOf="@+id/buttonNameOk" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"/>
</android.support.constraint.ConstraintLayout>