<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".MainActivity"
        tools:showIn="@layout/activity_main">

    <ImageView
            android:id="@+id/avatar"
            android:layout_width="0dp"
            android:layout_height="171dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/contact"
            android:contentDescription="@string/desc"
            android:visibility="visible"
            android:src="@drawable/avatar_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintTop_toBottomOf="@+id/name" android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp" android:layout_marginStart="8dp"/>

    <TextView
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/John"
            android:id="@+id/name"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textSize="12sp"
            android:textColor="@android:color/darker_gray"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/avatar"/>

    <Button
            android:text="@string/contact"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:id="@+id/contact"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/sound" android:layout_marginBottom="20dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="@string/sound"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/sound"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="160dp"
            app:layout_constraintHorizontal_bias="1.0" android:layout_marginStart="8dp"/>

</android.support.constraint.ConstraintLayout>